# tensr

./: .travis.yml  Cargo.toml  README.md
benches/: matrix_add.rs  matrix_vector_mul_order.rs  vector_add.rs
benches/preamble/: mod.rs
src/: array_math.rs  index_notation.rs  lazy.rs  lib.rs  matrix.rs
src/lazy/: .eval.rs.swp  constructors.rs  cwise_bin_expr.rs  enumerate.rs  eval.rs  expr_mut.rs  index_notation.rs  sparse_expr.rs  target.rs
src/matrix/: sprs_compat.rs  ssblock.rs
tests/: array_math.rs  tensor.rs
