[package]
name = "tensr"
version = "0.3.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "Sparse and dense linear algebra library supporting lazy evaluation and block matrices"
homepage = "https://github.com/elrnv/tensr"
repository = "https://github.com/elrnv/tensr"
documentation = "https://docs.rs/tensr"
keywords = ["tensor", "sparse", "lazy", "block", "linear algebra"]

[dependencies]
flatk = { git = "https://github.com/elrnv/flatk.git", version = "0.4", features = ["rayon"] }
reinterpret = "0.2"
bytemuck = "1.5"
sprs = { version = "0.10", optional = true }
image = "0.23"
unroll = "0.1"
num-traits = "0.2"
rayon = "1.5"
typenum = "1.12"
autodiff = { version = "0.3", optional = true, features = ["bytemuck"] }
packed_simd_2 = { version = "0.3", optional = true }
approx = { version = "0.4", optional = true }

[dev-dependencies]
cgmath = "0.18"
criterion = "0.3"
rand = "0.8"

[features]
unstable = ["criterion/real_blackbox", "packed_simd_2"]
default = ["sprs", "approx"]

[[bench]]
name = "sum"
harness = false
#[[bench]]
#name = "vectorize"
#harness = false
[[bench]]
name = "norm_squared"
harness = false
[[bench]]
name = "trace"
harness = false
[[bench]]
name = "determinant"
harness = false
[[bench]]
name = "inverse"
harness = false
[[bench]]
name = "transpose"
harness = false
[[bench]]
name = "mtx_vec_mul"
harness = false
[[bench]]
name = "mtx_mtx_mul"
harness = false
[[bench]]
name = "matrix_vector_mul_order"
harness = false
[[bench]]
name = "matrix_add"
harness = false
[[bench]]
name = "vector_add"
harness = false
